VCL: Fixes tdf#99207 by converting colors from COLORREF to D2D1::ColorF

Change-Id: I7ff44474cf389f3e597a1a65fbfb5b1d649ee074